# fastapi_weather

./: .env  .version  Dockerfile  README.md  alembic.ini  docker-compose.services.yml  docker-compose.yml  pyproject.toml  pytest.ini  version.sh
alembic/: env.py
app/: app.py  main.py  settings.py
app/api/rest/handlers/: __init__.py  health_check.py  weather.py
app/db/models/: __init__.py
app/db/repos/: base.py
app/services/: weather.py
dev/: FastAPI.run.xml  alembic autogenerate.run.xml  alembic upgrade.run.xml  pytest.run.xml
tests/: conftest.py
tests/data/: test_weather_data.json
tests/test_api/: test_healthcheck.py  test_weather.py
tests/test_sanity/: test_sanity.py
tests/test_services/: test_weather_service.py
