[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mogaiskii <sani.mog@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
invoke = "^2.2.0"
pyjwt = "^2.10.1"
pydantic-settings = "^2.9.1"
tzdata = "^2025.2"
pytest-env = "^1.1.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-async-sqlalchemy = "^0.2.0"
faker = "^37.1.0"
httpx = "^0.28.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
