[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mogaiskii <sani.mog@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
invoke = "^2.2.0"
pyjwt = "^2.10.1"
pydantic-settings = "^2.9.1"
tzdata = "^2025.2"
pytest-env = "^1.1.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiohttp = "^3.11.18"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-async-sqlalchemy = "^0.2.0"
faker = "^37.1.0"
httpx = "^0.28.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
